[workspace]
members = [
  "crates/bin",
  "crates/brontes-core",
  "crates/reth-tracing-ext",
  "crates/brontes-inspect",
  "crates/brontes-types",
  "crates/brontes-classifier",
  "crates/brontes-metrics",
  "crates/brontes-tracing",
  "crates/brontes-database/brontes-db",
  "crates/brontes-macros",
  "crates/brontes-pricing",
  "crates/brontes-database/libmdbx-rs",
]

resolver = "2"

[workspace.dependencies]
# Database
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs", branch = "master", features = [
  "tls",
] }

# Brontes
brontes-core = { path = "./crates/brontes-core" }
brontes-inspect = { path = "./crates/brontes-inspect" }
brontes-types = { path = "./crates/brontes-types/" }
brontes-classifier = { path = "./crates/brontes-classifier/" }
brontes-metrics = { path = "./crates/brontes-metrics/" }
brontes-database = { path = "./crates/brontes-database/brontes-db" }
brontes-macros = { path = "./crates/brontes-macros/" }
brontes-pricing = { path = "./crates/brontes-pricing/" }
reth-tracing-ext = { path = "./crates/reth-tracing-ext/" }
brontes-tracing = { path = "./crates/brontes-tracing" }
brontes-analytics = { path = "./crates/brontes-analytics" }
brontes-libmdbx = { path = "./crates/brontes-database/libmdbx-rs" }

# Reth
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", features = [
  "test-utils",
], version = "1.3.0", tag = "v1.3.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }

# ruint
ruint = "1.9.0"

# revm
revm = { version = "20.0.0-alpha.5", features = [
  "std",
  "secp256k1",
  "optional_balance_check",
  "optional_block_gas_limit",
], default-features = false }
revm-primitives = { version = "16.0.0-alpha.3", features = [
  "std",
], default-features = false }
revm-inspector = { version = "1.0.0-alpha.5", default-features = false }
revm-inspectors = "0.17.0-alpha.1"
alloy-evm = { version = "0.1.0-alpha.1", default-features = false }


# Alloy
alloy-sol-types = { version = "0.8.23", features = ["json"] }
alloy-sol-macro = { version = "0.8.23", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-rlp-derive = { version = "0.3.4" }
alloy-primitives = { version = "0.8.20", features = ["rlp"] }
alloy-json-abi = "0.7.0"
alloy-dyn-abi = "0.7.0 "

# Alloy core
alloy-provider = { version = "0.12.5", default-features = false, features = [
  "ipc",
  "ws",
  "pubsub",
  "reqwest",
] }
alloy-transport-http = { version = "0.12.5" }
alloy-transport = { version = "0.12.5" }
alloy-consensus = { version = "0.12.5" }
alloy-network = { version = "0.12.5" }
alloy-json-rpc = { version = "0.12.5" }
alloy-rpc-types = { version = "0.12.5", features = ["jsonrpsee-types", "eth"] }
alloy-rpc-types-trace = "0.12.5"
alloy-rpc-types-beacon = "0.12.5"
alloy-rpc-client = { version = "0.12.5" }


# Async
tokio = { version = "1.13.0", features = ["full", "tracing"] }
futures = "0.3.28"
async-trait = "0.1.73"
async-rate-limiter = { git = "https://github.com/jnoorchashm37/async-rate-limiter" }

#Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "env-filter",
  "fmt",
] }
colored = "2.0"

# Metrics
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.19.0" }

# Logging
env_logger = "0.10.0"

# error handling
thiserror = "1.0.44"
eyre = "0.6.8"

# http/rpc
hyper = { version = "0.14.25", features = ["server"] }
hyper-tls = "0.5.0"
reqwest = "0.12.2"

# Serde
serde = "1.0.205"
serde_json = "1.0.1"
serde_with = "3.4.0"
serde_repr = "0.1.16"

# cli
clap = { version = "4.4.6", features = ["derive"] }


# Numbers
malachite = "0.4.0"
malachite-q = "0.4.0"

# phf
phf = "0.11.2"
phf_codegen = "0.11.2"

# metrics
metrics = "0.24.0"

# misc
backon = "0.4.4"
c-kzg = "0.4.0"
hex-literal = "0.4.1"
rayon = "1.7.0"
dotenv = "0.15.0"
semver = "1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
itertools = "0.11.0"
parking_lot = "0.12.1"
toml = "0.8.2"
auto_impl = "1.1.0"
strum = "0.25.0"
serial_test = "2.0.0"
derive_more = { version = "2.0", features = ["full"] }
rkyv = { git = "https://github.com/rkyv/rkyv.git", branch = "0.7-hashbrown-0.14", features = [
  "validation",
] }
num_cpus = "1.16.0"
redefined = { git = "https://github.com/jnoorchashm37/redefined" }
bytes = "1.5"
bitflags = "2.5.0"

arrow = "54.2.1"
polars = { version = "0.38.3", features = ["lazy"] }
parquet = { version = "54.2.1", features = ["async"] }
indicatif = "0.17.8"

# filesystem
fs2 = "0.4.3"
fs_extra = "1.3.0"
filesize = "0.2.0"
tar = "0.4.41"
flate2 = "1.0.30"


[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true


[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
