[workspace]
members = [
  "crates/bin",
  "crates/brontes-core",
  "crates/reth-tracing-ext",
  "crates/brontes-inspect",
  "crates/brontes-types",
  "crates/brontes-classifier",
  "crates/brontes-metrics",
  "crates/brontes-tracing",
  "crates/brontes-database/brontes-db",
  "crates/brontes-macros",
  "crates/brontes-pricing",
  "crates/brontes-database/libmdbx-rs",
]

resolver = "2"

[workspace.dependencies]

# rpc
jsonrpsee = "0.23.1"
jsonrpsee-core = "0.23.1"
jsonrpsee-types = "0.23.1"
jsonrpsee-http-client = "0.23.1"
enr = { version = "0.12.0", default-features = false, features = [
  "k256",
  "rust-secp256k1",
] }
secp256k1 = { version = "0.28.2", default-features = false, features = [
  "global-context",
  "recovery",
] }


# Database
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs", branch = "master", features = [
  "tls",
] }

# Brontes
brontes-core = { path = "./crates/brontes-core" }
brontes-inspect = { path = "./crates/brontes-inspect" }
brontes-types = { path = "./crates/brontes-types/" }
brontes-classifier = { path = "./crates/brontes-classifier/" }
brontes-metrics = { path = "./crates/brontes-metrics/" }
brontes-database = { path = "./crates/brontes-database/brontes-db" }
brontes-macros = { path = "./crates/brontes-macros/" }
brontes-pricing = { path = "./crates/brontes-pricing/" }
reth-tracing-ext = { path = "./crates/reth-tracing-ext/" }
brontes-tracing = { path = "./crates/brontes-tracing" }
brontes-analytics = { path = "./crates/brontes-analytics" }
brontes-libmdbx = { path = "./crates/brontes-database/libmdbx-rs" }

# Reth
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "560080e" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-types", rev = "560080e" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "560080e" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "560080e" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "560080e" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "560080e" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "560080e" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "560080e" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "560080e" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "560080e" }
# reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "560080e", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives-traits", rev = "560080e" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "560080e", default-features = false }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "560080e" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-core", rev = "560080e" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "560080e" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "560080e" }
# reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = [
#   "test-utils",
# ], rev = "560080e" }
# reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = [
#   "test-utils",
# ], rev = "560080e" }
# reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "560080e" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", package = "reth-libmdbx", rev = "560080e" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", package = "reth-storage-errors", rev = "560080e" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "560080e" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "560080e" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", package = "reth-codecs", rev = "560080e" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "560080e" }

# ruint
ruint = "1.9.0"

# revm
revm = { version = "9.0.0", features = [
  "std",
  "secp256k1",
  "blst",
], default-features = false }
revm-primitives = { version = "4.0.0", features = [
  "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "70e721d" }


# Alloy
alloy-sol-types = { version = "0.7.2", features = ["json"] }
alloy-sol-macro = { version = "0.7.2", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-rlp-derive = { version = "0.3.4" }
alloy-primitives = { version = "0.7.2", features = ["rlp"] }
alloy-json-abi = "0.7.2"
alloy-dyn-abi = "0.7.2"
alloy-chains = "0.1.15"
alloy-trie = "0.4.1"

# Alloy core
# alloy-chains = "0.1.15"
# alloy-primitives = "0.7.2"
# alloy-dyn-abi = "0.7.2"
# alloy-sol-types = "0.7.2"
# alloy-rlp = "0.3.4"
# alloy-trie = "0.4"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false, features = [
  "eth",
] }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false, features = [
  "reqwest",
] }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", default-features = false, rev = "00d81d7" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", features = [
  "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }

# Async
tokio = { version = "1", features = ["full", "tracing"] }
futures = "0.3.28"
async-trait = "0.1.73"
async-rate-limiter = { git = "https://github.com/jnoorchashm37/async-rate-limiter" }

#Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "env-filter",
  "fmt",
] }
colored = "2.0"


# Metrics
metrics = "0.22.0"
metrics-exporter-prometheus = { version = "0.14.0", default-features = false }
metrics-util = "0.16.0"
metrics-process = "2.0.0"

# Logging
env_logger = "0.10.0"

# error handling
thiserror = "1.0.44"
eyre = "0.6.8"

# http/rpc
hyper = "1.6.0"
hyper-tls = "0.5.0"
reqwest = "0.12.2"

# Serde
serde = "1.0.205"
serde_json = "1.0.1"
serde_with = "3.4.0"
serde_repr = "0.1.16"

# cli
clap = { version = "4.4.6", features = ["derive"] }


# Numbers
malachite = "0.4.0"
malachite-q = "0.4.0"

# phf
phf = "0.11.2"
phf_codegen = "0.11.2"


# misc
backon = "0.4.4"
c-kzg = "0.4.0"
hex-literal = "0.4.1"
rayon = "1.7.0"
dotenv = "0.15.0"
semver = "1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
itertools = "0.11.0"
parking_lot = "0.12.1"
toml = "0.8.2"
auto_impl = "1.1.0"
strum = "0.25.0"
serial_test = "2.0.0"
derive_more = "0.99.17"
rkyv = { git = "https://github.com/rkyv/rkyv.git", branch = "0.7-hashbrown-0.14", features = [
  "validation",
] }
num_cpus = "1.16.0"
redefined = { git = "https://github.com/jnoorchashm37/redefined" }
bytes = "1.5"
bitflags = "2.5.0"

arrow = "51.0.0"
polars = { version = "0.38.3", features = ["lazy"] }
parquet = { version = "51.0.0", features = ["async"] }
indicatif = "0.17.8"

# filesystem
fs2 = "0.4.3"
fs_extra = "1.3.0"
filesize = "0.2.0"
tar = "0.4.41"
flate2 = "1.0.30"


[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true


[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false


[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
