[workspace]
members = [
  "crates/bin",
  "crates/brontes-core",
  "crates/reth-tracing-ext",
  "crates/brontes-inspect",
  "crates/brontes-types",
  "crates/brontes-classifier",
  "crates/brontes-metrics",
  "crates/brontes-tracing",
  "crates/brontes-database/brontes-db",
  "crates/brontes-macros",
  "crates/brontes-pricing",
  "crates/brontes-database/libmdbx-rs",
  "crates/brontes-timeboost",
]

resolver = "2"

[workspace.dependencies]
# Database
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs", branch = "master", features = [
  "tls",
] }

# Brontes
brontes-core = { path = "./crates/brontes-core" }
brontes-inspect = { path = "./crates/brontes-inspect" }
brontes-types = { path = "./crates/brontes-types/" }
brontes-classifier = { path = "./crates/brontes-classifier/" }
brontes-metrics = { path = "./crates/brontes-metrics/" }
brontes-database = { path = "./crates/brontes-database/brontes-db" }
brontes-macros = { path = "./crates/brontes-macros/" }
brontes-pricing = { path = "./crates/brontes-pricing/" }
reth-tracing-ext = { path = "./crates/reth-tracing-ext/" }
brontes-tracing = { path = "./crates/brontes-tracing" }
brontes-analytics = { path = "./crates/brontes-analytics" }
brontes-libmdbx = { path = "./crates/brontes-database/libmdbx-rs" }
brontes-timeboost = { path = "./crates/brontes-timeboost" }

# Reth
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "ac29b4b" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "ac29b4b" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "ac29b4b" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "ac29b4b" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "ac29b4b" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "ac29b4b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "ac29b4b" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "ac29b4b" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "ac29b4b" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "ac29b4b" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "ac29b4b" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "ac29b4b" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-core", rev = "ac29b4b" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "ac29b4b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "ac29b4b" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = [
  "test-utils",
], rev = "ac29b4b" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = [
  "test-utils",
], rev = "ac29b4b" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "ac29b4b" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", package = "reth-libmdbx", rev = "ac29b4b" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "ac29b4b" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "ac29b4b" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "ac29b4b" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", package = "reth-codecs", rev = "ac29b4b" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b" }

# ruint
ruint = "1.9.0"

# revm
revm = { version = "8.0.0", features = [
  "std",
  "secp256k1",
], default-features = false }
revm-primitives = { version = "3.1", features = [
  "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "dc614ee" }


# Alloy
alloy-sol-types = { version = "0.7.0", features = ["json"] }
alloy-sol-macro = { version = "0.7.0", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-rlp-derive = { version = "0.3.4" }
alloy-primitives = { version = "0.7.0", features = ["rlp"] }
alloy-json-abi = "0.7.0"
alloy-dyn-abi = "0.7.0 "

# Alloy core
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = [
  "reqwest",
] }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = [
  "jsonrpsee-types",
] }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }

# Async
tokio = { version = "1.13.0", features = ["full", "tracing"] }
futures = "0.3.28"
async-trait = "0.1.73"
async-rate-limiter = { git = "https://github.com/jnoorchashm37/async-rate-limiter" }

#Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "env-filter",
  "fmt",
] }
colored = "2.0"

# Metrics
metrics-exporter-prometheus = "=0.12.1"
metrics-util = "0.15.0"
metrics-process = "=1.0.14"

# Logging
env_logger = "0.10.0"

# error handling
thiserror = "1.0.44"
eyre = "0.6.8"

# http/rpc
hyper = "0.14.25"
hyper-tls = "0.5.0"
reqwest = "0.12.2"

# Serde
serde = "1.0.205"
serde_json = "1.0.1"
serde_with = "3.4.0"
serde_repr = "0.1.16"

# cli
clap = { version = "4.4.6", features = ["derive"] }


# Numbers
malachite = "0.4.0"
malachite-q = "0.4.0"

# phf
phf = "0.11.2"
phf_codegen = "0.11.2"

# metrics
metrics = "0.21.1"

# misc
backon = "0.4.4"
c-kzg = "0.4.0"
hex-literal = "0.4.1"
rayon = "1.7.0"
dotenv = "0.15.0"
semver = "1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
itertools = "0.11.0"
parking_lot = "0.12.1"
toml = "0.8.2"
auto_impl = "1.1.0"
strum = "0.25.0"
serial_test = "2.0.0"
derive_more = "0.99.17"
rkyv = { git = "https://github.com/rkyv/rkyv.git", branch = "0.7-hashbrown-0.14", features = [
  "validation",
] }
num_cpus = "1.16.0"
redefined = { git = "https://github.com/SorellaLabs/redefined" }
bytes = "1.5"
bitflags = "2.5.0"
governor = { version = "0.10.0" , features = ["jitter"] }

arrow = "51.0.0"
polars = { version = "0.38.3", features = ["lazy"] }
parquet = { version = "51.0.0", features = ["async"] }
indicatif = "0.17.8"

# filesystem
fs2 = "0.4.3"
fs_extra = "1.3.0"
filesize = "0.2.0"
tar = "0.4.41"
flate2 = "1.0.30"


[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true


[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
