[package]
name = "dylib-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-sol-types.workspace = true
libloading = "0.8.1"
lru = "0.12.0"
num_cpus = "1.16.0"
sorella-db-databases.workspace = true
# hyper-tls.workspace = true
# serde.workspace = true
# serde_json.workspace = true
# tokio.workspace = true
