[package]
name = "alloy-etherscan"
authors = [
    "Matthias Seitz <matthias.seitz@outlook.de>",
    "Georgios Konstantopoulos <me@gakonst.com>",
]
readme = "README.md"
description = "Bindings for the etherscan.io web API"
keywords = ["crypto", "ethers", "ethereum", "web3", "etherscan"]
version = "0.1.0"




[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-core = { version = "2.0.7"}
ethers-solc = { version = "2.0.7", optional = true}


reqwest = { version = "0.11.18", features = ["json"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
tracing = "0.1.37"
semver = "1.0"

[dev-dependencies]
ethers-solc = "2.0.7"

tempfile = "3.5"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time"] }
serial_test = "2.0.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]

ethers-solc = ["dep:ethers-solc"]
solc-full = ["ethers-solc?/full"]
solc-tests = ["ethers-solc?/tests"]
