[package]
name = "alloy-etherscan"
authors = [
  "Matthias Seitz <matthias.seitz@outlook.de>",
  "Georgios Konstantopoulos <me@gakonst.com>",
]
readme = "README.md"
description = "Bindings for the etherscan.io web API"
keywords = ["crypto", "ethers", "ethereum", "web3", "etherscan"]
version = "0.1.0"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-core.workspace = true
ethers-solc = { workspace = true, optional = true }

alloy-primitives.workspace = true
alloy-json-abi.workspace = true

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

thiserror.workspace = true
semver.workspace = true

#tracing
tracing.workspace = true


[dev-dependencies]
ethers-solc.workspace = true
tempfile = "3.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]

ethers-solc = ["dep:ethers-solc"]
solc-full = ["ethers-solc?/full"]
solc-tests = ["ethers-solc?/tests"]
