[package]
name = "brontes-analytics"
version = "0.1.0"
edition = "2021"


[dependencies]
# brontes
brontes-types.workspace = true
brontes-database.workspace = true
reth-tracing-ext.workspace = true


# alloy 
alloy-primitives.workspace = true

# eyre
eyre.workspace = true

# tracing
tracing.workspace = true

[features]
local-clickhouse = ["brontes-database/local-clickhouse"]