[package]
name = "brontes-analytics"
version = "0.1.0"
edition = "2021"


[dependencies]
# brontes
brontes-types.workspace = true
brontes-database.workspace = true
reth-tracing-ext.workspace = true

polars = { version = "0.38.2", features = ["lazy"]}
arrow = "50.0.0"
parquet = "50.0.0"

# alloy 
alloy-primitives.workspace = true

# eyre
eyre.workspace = true

# tracing
tracing.workspace = true

rayon.workspace = true

[features]
local-clickhouse = ["brontes-database/local-clickhouse"]
