[package]
name = "brontes-analytics"
version = "0.1.0"
edition = "2021"


[dependencies]
# brontes
brontes-types.workspace = true
brontes-database.workspace = true
reth-tracing-ext.workspace = true


chrono = "0.4.34"
arrow.workspace = true
parquet.workspace = true
polars = {features = ["lazy", "parquet", "group_by_list", "polars-io"], workspace = true}
# alloy 
alloy-primitives.workspace = true

# eyre
eyre.workspace = true

# tracing
tracing.workspace = true

rayon.workspace = true

[features]
local-clickhouse = ["brontes-database/local-clickhouse"]
