[package]
name = "brontes-classifier"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "classifier"
harness = false

[dependencies]
# brontes
brontes-types.workspace = true
brontes-macros.workspace = true
brontes-database.workspace = true
brontes-database-libmdbx.workspace = true
brontes-pricing.workspace = true
alloy-primitives.workspace = true

tokio.workspace = true

# alloy
alloy-sol-types.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-networks = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-rlp.workspace = true

# reth
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true

# tracing
tracing.workspace = true

# libmdbx stuff


# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# misc
hex-literal.workspace = true
rayon.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
malachite.workspace = true
parking_lot.workspace = true
paste = "1.0.14"
phf.workspace = true
unstringify = "0.1.4"
itertools.workspace = true

# tests feature (unique)
reth-tracing-ext = { workspace = true, optional = true }
brontes-core = { workspace = true, optional = true }


[features]
default = []
tests = ["reth-tracing-ext", "brontes-core"]
local = ["brontes-core/local"]

[dev-dependencies]
dotenv.workspace = true
tokio.workspace = true
serial_test.workspace = true
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-core = { workspace = true, features = ["tests"] }
brontes-database = { workspace = true, features = ["tests"] }
reth-tracing-ext.workspace = true
criterion = "0.5"


[build-dependencies]
tokio.workspace = true
clickhouse.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
serde.workspace = true
serde_json.workspace = true
phf_codegen.workspace = true
rayon.workspace = true
alloy-json-abi = { workspace = true, features = ["serde_json"] }
reth-rpc-types.workspace = true
reth-primitives.workspace = true
futures.workspace = true
itertools.workspace = true
dotenv.workspace = true
reth-tracing-ext.workspace = true
