[package]
name = "brontes-classifier"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "classifier"
harness = false

[dependencies]
# brontes
brontes-types.workspace = true
brontes-macros.workspace = true
brontes-metrics.workspace = true
brontes-database.workspace = true
brontes-pricing.workspace = true
brontes-core.workspace = true
alloy-primitives.workspace = true

# async
tokio.workspace = true
futures.workspace = true

# alloy
alloy-sol-types.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-rpc-types.workspace = true
alloy-rlp.workspace = true
alloy-dyn-abi.workspace = true

# reth
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true

# tracing
tracing.workspace = true

# libmdbx stuff


# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true


# misc
hex-literal.workspace = true
rayon.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
malachite.workspace = true
parking_lot.workspace = true
paste = "1.0.14"
phf.workspace = true
itertools.workspace = true
eyre.workspace = true

# tests feature (unique)
reth-tracing-ext = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
criterion = { version = "0.5", features = [
  "async",
  "async_tokio",
], optional = true }

[dev-dependencies]
strum = { workspace = true, features = ["derive"] }
dotenv.workspace = true
tokio.workspace = true
serial_test.workspace = true
thiserror.workspace = true
brontes-pricing = { workspace = true, features = ["tests"] }
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-core = { workspace = true, features = ["tests"] }
brontes-database = { workspace = true, features = ["tests"] }
reth-tracing-ext.workspace = true
criterion = "0.5"
brontes-macros.workspace = true

[features]
default = []
tests = [
  "reth-tracing-ext",
  "brontes-core/tests",
  "thiserror",
  "criterion",
  "brontes-pricing/tests",
]
local-reth = [
  "brontes-core/local-reth",
  "reth-tracing-ext/local-reth",
  "brontes-types/local-reth",
]

local-clickhouse = [
  "brontes-database/local-clickhouse",
  "brontes-core/local-clickhouse",
]

arbitrum = ["brontes-types/arbitrum"]
